# llm-evaluation-service-starter

./: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  worker.py
app/api/: health.py  metrics.py  routes.py
app/core/: audit.py  auth.py  config.py  errors.py  logging.py  metrics.py  rate_limit.py  resilience.py  tracing.py
app/domain/: evaluation.py  models.py
app/services/: evaluator.py  job_service.py  queue.py  worker.py
app/storage/: base.py  factory.py  in_memory.py  postgres.py
deploy/: docker-compose.yml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
docs/: api-worker-split.md  observability-data-safety.md  operations-runbook.md  otlp-collector.md  provider-adapter.md  security-scanning.md
migrations/: env.py
migrations/versions/: 20260524_0001_create_evaluation_jobs.py  20260526_0002_add_job_attempt_metadata.py
openapi/: openapi.json
scripts/: create_demo_jwt.py  export_openapi.py  local_e2e.sh  validate_dockerfile_policy.py  validate_k8s_manifests.py
tests/: conftest.py
tests/integration/: test_api.py  test_openapi.py
tests/unit/: test_auth.py  test_evaluator.py  test_job_service.py  test_metrics.py  test_queue.py  test_repository_contract.py  test_worker.py
